apps/kubernetes/k3s/apps/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`n8n.hughboi.vip`)
      kind: Rule
      services:
        - name: n8n
          port: 5678
  tls:
    secretName: hughboi-tls
